--- a/webgl-tests/test.html
+++ b/webgl-tests/test.html
@@ -62,7 +62,7 @@ function init() {
 	gl.positionLocation = gl.getAttribLocation(program, "a_position");
         gl.colorLocation = gl.getAttribLocation(program, "a_color");
 	gl.enable(gl.LINE_SMOOTH);
-	gl.lineWidth(30);
+	gl.lineWidth(3);
 
         gl.viewport(0.0, 0.0, canvas.width, canvas.height);
 	gl.clearColor(0.0, 0.0, 0.0, 1.0);
@@ -93,9 +93,9 @@ function drawTrace(trace, color) {
 	gl.enableVertexAttribArray(gl.positionLocation);
 
 	
-	buffer = gl.createBuffer();
-	gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
-	gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
+	colorBuffer = gl.createBuffer();
+	gl.bindBuffer(gl.ARRAY_BUFFER, colorBuffer);
+	gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
 	buffer.itemSize = 4;
 	buffer.numItems = n;
 	gl.vertexAttribPointer(gl.colorLocation, 4, gl.FLOAT, false, 0, 0);
