--- a/webgl-tests/test.html
+++ b/webgl-tests/test.html
@@ -42,6 +42,10 @@
 var gl;
 var positionLocation;
 var colorLocation;
+var lastTick;
+var i=0;
+var leftTurn=false;
+var rightTurn = false;
 
 function init() {
 	canvas = document.getElementById("lesson01-canvas");
@@ -67,9 +71,10 @@ function init() {
         gl.viewport(0.0, 0.0, canvas.width, canvas.height);
 	gl.clearColor(0.0, 0.0, 0.0, 1.0);
 	gl.disable(gl.DEPTH_TEST);
+	d = new Date();
+	lastTick = d.getTime();
 }
 
-var i=0;
 
 function drawTrace(trace, color) {
 	var n = trace.length;
@@ -104,10 +109,17 @@ function drawTrace(trace, color) {
 }
 
 function tick() {
+	d = new Date();
+	ntime = d.getTime();
+	time = (ntime - lastTick)/1000;
+	lastTick = ntime;
+
 	requestAnimFrame(tick);
 	gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-	for(var i = 0; i< players.length; ++i)
+	for(var i = 0; i< players.length; ++i) {
+		players[i].step();
 		drawTrace(players[i].trace, players[i].color);
+	}
 }
 
 function color(r,g,b,a)
@@ -131,7 +143,24 @@ function player() {
 		this.trace[i+100] = new point(i/100, Math.sin(4*i/100));
 	}
 	this.color = new color(1,0,0,1);
+	this.position = new point(Math.random()*2-1, Math.random()*2-1);
+	this.direction = Math.random()*Math.PI*2;
 }
+var dt = 0.3;
+var dphi = 0.3;
+
+player.prototype.step = function() {
+	if(leftTurn) {
+		this.direction += time*Math.PI*dphi;
+	}
+	if(rightTurn) {
+		this.direction -= time*Math.PI*dphi;
+	}
+	this.position.x += time*Math.sin(this.direction)*dt;
+	this.position.y += time*Math.cos(this.direction)*dt;
+	this.trace.push(new point(this.position.x, this.position.y));
+}
+
 function WebGLStart() {
 	players = [ new player() ];
 	init();
