--- a/webgl-tests/test.html
+++ b/webgl-tests/test.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <script type="text/javascript" src="webgl-utils.js"> </script>
+<script type="text/javascript" src="jquery-1.7.2.js"> </script>
 <script type="text/javascript">
+
 
     function getShader(gl, id) {
         var shaderScript = document.getElementById(id);
@@ -48,6 +50,21 @@ var leftTurn=false;
 var rightTurn = false;
 
 function init() {
+ 	$('body').keydown(function(event) {
+		if(event.which == 37) {
+			leftTurn = true;
+		} else if(event.which == 39) {
+			rightTurn = true;
+		}
+	});
+ 	$('body').keyup(function(event) {
+		if(event.which == 37) {
+			leftTurn = false;
+		} else if(event.which == 39) {
+			rightTurn = false;
+		}
+	});
+
 	canvas = document.getElementById("lesson01-canvas");
         gl = canvas.getContext("experimental-webgl");
         gl.viewportWidth = canvas.width;
@@ -137,24 +154,20 @@ function point(x,y)
 };
 
 function player() {
-	this.trace = new Array(200);
-	for(var i=-100; i<100; ++i)
-	{
-		this.trace[i+100] = new point(i/100, Math.sin(4*i/100));
-	}
 	this.color = new color(1,0,0,1);
 	this.position = new point(Math.random()*2-1, Math.random()*2-1);
 	this.direction = Math.random()*Math.PI*2;
+	this.trace = [ new point(this.position.x, this.position.y)];
 }
 var dt = 0.3;
-var dphi = 0.3;
+var dphi = 0.6;
 
 player.prototype.step = function() {
 	if(leftTurn) {
-		this.direction += time*Math.PI*dphi;
+		this.direction -= time*Math.PI*dphi;
 	}
 	if(rightTurn) {
-		this.direction -= time*Math.PI*dphi;
+		this.direction += time*Math.PI*dphi;
 	}
 	this.position.x += time*Math.sin(this.direction)*dt;
 	this.position.y += time*Math.cos(this.direction)*dt;
