--- a/webgl-tests/test.html
+++ b/webgl-tests/test.html
@@ -92,19 +92,79 @@ function init() {
 	lastTick = d.getTime();
 }
 
+function hsv(h, s, v)
+{
+   this.hue = h;
+   this.sat = s;
+   this.val = v;
+}
 
-function drawTrace(trace, color) {
-	var n = trace.length;
+var hsv2rgb = function(hsv) {
+  var h = hsv.hue, s = hsv.sat, v = hsv.val;
+  var rgb, i, data = [];
+  if (s === 0) {
+    rgb = [v,v,v];
+  } else {
+    h = h / 60;
+    i = Math.floor(h);
+    data = [v*(1-s), v*(1-s*(h-i)), v*(1-s*(1-(h-i)))];
+    switch(i) {
+      case 0:
+        rgb = [v, data[2], data[0]];
+        break;
+      case 1:
+        rgb = [data[1], v, data[0]];
+        break;
+      case 2:
+        rgb = [data[0], v, data[2]];
+        break;
+      case 3:
+        rgb = [data[0], data[1], v];
+        break;
+      case 4:
+        rgb = [data[2], data[0], v];
+        break;
+      default:
+        rgb = [v, data[0], data[1]];
+        break;
+    }
+  }
+  return rgb;
+};
+
+function pointFromServer(nick, point, direction) 
+{
+	players[nick].addPoint(point, direction);
+};
+
+function drawTrace(plr) {
+	var n = plr.server_trace.length + plr.temp_trace.length;
 	var vertices = new Array(2*n);
 	var colors = new Array(4*n);
-	for(var i=0; i<n-5; ++i) 
+	//var col = rgb(hsv2rgb(new hsv(180, 1, 1)));
+	//var col = new color(0, 1, 0, 1);
+	var i=0;
+	for(i=0; i<plr.server_trace.length; ++i) 
 	{
-		vertices[2*i] = trace[i].x;
-		vertices[2*i+1] = trace[i].y;
-		colors[4*i]   = color.r;
-		colors[4*i+1] = color.g;
-		colors[4*i+2] = color.b;
-		colors[4*i+3] = color.a;
+		vertices[2*i] = plr.server_trace[i].x;
+		vertices[2*i+1] = plr.server_trace[i].y;
+		col = rgb(hsv2rgb(new hsv(i % 360, 1, 1)));
+		colors[4*i]   = col.r;
+		colors[4*i+1] = col.g;
+		colors[4*i+2] = col.b;
+		colors[4*i+3] = col.a;
+	}
+
+	for(; i<n; ++i)
+	{
+		j = i - plr.server_trace.length;
+		vertices[2*i] = plr.temp_trace[j];
+		vertices[2*i+1] = plr.temp_trace[j];
+		col = rgb(hsv2rgb(new hsv(i % 360, 1, 1)));
+		colors[4*i]   = col.r;
+		colors[4*i+1] = col.g;
+		colors[4*i+2] = col.b;
+		colors[4*i+3] = col.a;
 	}
 	buffer = gl.createBuffer();
 	gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
@@ -135,8 +195,13 @@ function tick() {
 	gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 	for(var i = 0; i< players.length; ++i) {
 		players[i].step();
-		drawTrace(players[i].trace, players[i].color);
+		drawTrace(players[i]);
 	}
+}
+
+function rgb(arr) 
+{
+	return new color(arr[0], arr[1], arr[2], 1);
 }
 
 function color(r,g,b,a)
@@ -154,10 +219,11 @@ function point(x,y)
 };
 
 function player() {
-	this.color = new color(1,0,0,1);
+	this.color = new color(0,1,0,1);
 	this.position = new point(Math.random()*2-1, Math.random()*2-1);
 	this.direction = Math.random()*Math.PI*2;
-	this.trace = [ new point(this.position.x, this.position.y)];
+	this.server_trace = [ new point(this.position.x, this.position.y)];
+	this.temp_trace = [];
 }
 var dt = 0.3;
 var dphi = 0.6;
@@ -171,7 +237,15 @@ player.prototype.step = function() {
 	}
 	this.position.x += time*Math.sin(this.direction)*dt;
 	this.position.y += time*Math.cos(this.direction)*dt;
-	this.trace.push(new point(this.position.x, this.position.y));
+	this.temp_trace.push(new point(this.position.x, this.position.y));
+}
+
+player.prototype.addPoint = function(pnt, direction)
+{
+	this.position = pnt;
+	this.direction = direction;
+	this.server_trace.push(pnt);
+	this.temp_trace.length = 0;
 }
 
 function WebGLStart() {
