--- a/frontend/network-test.html
+++ b/frontend/network-test.html
@@ -23,6 +23,14 @@
     <script type="text/javascript" src="js/ui.js"></script>
     <script type="text/javascript" src="js/net.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
+    <style>
+    .user_color {
+      width: 15px;
+      height: 15px;
+      display: inline-block;
+      border:1px solid black;
+    }
+    </style>
 </head>
 <body>
 </body>
@@ -43,14 +51,23 @@
         </div>
       </div>
     </div>
+
 <div class="container" style="margin-top:50px;">
+    <div id="errors">
+      <script id="error_template" type="text/x-jsrender">
+        <div class="alert alert-error">
+          <button class="close" data-dismiss="alert">×</button>
+          {{>error}}
+        </div>
+      </script>
+    </div>
 
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit" id="screen_welcome">
         <h1>Webtacka</h1>
         <label for="nick">Nick:</label>
         <input id="nick" name="nick" type="text"></input>
-        <p><a class="btn btn-primary btn-large" id="hello">Przywitaj się&raquo;</a></p>
+        <p><a class="btn btn-primary btn-large" id="hello">Go &raquo;</a></p>
   </div>
   <div class="hero-unit" id="screen_wait" style="display:none;">
         <h1>Webtacka</h1>
@@ -62,6 +79,7 @@
             <td>{{>id}}</td>
             <td>{{>capacity}}</td>
             <td>{{>people}}</td>
+            <td><a class="screen_room_list_join_btn" room_id="{{>id}}" href="#">join</td>
         </tr>
       </script>
 
@@ -69,7 +87,7 @@
         <div class="well span4">
             <h3>Room list</h3>
             Please choose a room from a list or create new.<br />
-            <!--<input type="text" id="create_room_input" placeholder="room name…">-->
+            <input type="text" id="create_room_capacity" placeholder="capacity…">
             <a class="btn btn-primary" id="create_room_btn">Create room</a>
          </div>
           <div class="well span8">
@@ -99,6 +117,12 @@
         <div class="well span8">
         </div>
         <div class="well span4">
+          <script id="score_board_template" type="text/x-jsrender">
+            <li nick="{{>nick}}" color1="{{>color1}}"
+            color2="{{>color2}}" class="score_board_entry"><div class="user_color"></div> {{>nick}} {{>score}}</li>
+          </script>
+          <ul id="screen_room_score_board">
+          <ul>
         </div>
       </div>
     </div>
