--- a/frontend/network-test.html
+++ b/frontend/network-test.html
@@ -89,6 +89,7 @@
             Please choose a room from a list or create new.<br />
             <input type="text" id="create_room_capacity" placeholder="capacity…">
             <a class="btn btn-primary" id="create_room_btn">Create room</a>
+            <a class="btn btn-primary" id="room_list_refresh_btn">Refresh list</a>
          </div>
           <div class="well span8">
               <table class="table table-striped table-bordered table-condensed" id="room_table">
