--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,10 @@
             server_url: "ws://ec2:9160",
         };
     </script>
+    <script type="text/javascript" src="js/webgl-utils.js"> </script>
+    <script type="text/javascript" src="js/glMatrix-0.9.5.min.js"> </script>
+    <script type="text/javascript" src="js/engine.js"></script>
+
     <script type="text/javascript" src="js/ui.js"></script>
     <script type="text/javascript" src="js/net.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
@@ -31,6 +35,52 @@
       border:1px solid black;
     }
     </style>
+<script id="2d-vertex-shader" type="x-shader/x-vertex">
+attribute vec2 a_position;
+attribute vec4 a_color;
+uniform mat4 uPMatrix;
+varying vec4 v_color;
+
+void main() {
+  gl_Position = uPMatrix*vec4(a_position, 0, 1);
+  v_color = a_color;
+}
+</script>
+
+<script id="2d-fragment-shader" type="x-shader/x-fragment">
+precision mediump float;
+varying vec4 v_color;
+void main() {
+  gl_FragColor = v_color;
+}
+</script>
+
+<script id="background-vertex-shader" type="x-shader/x-vertex">
+  attribute vec2 a_position;
+  attribute vec2 a_coords;
+
+  uniform mat4 uPMatrix;
+
+  varying vec2 vTextureCoord;
+
+  void main(void) {
+    gl_Position = uPMatrix * vec4(a_position, 0.0, 1.0);
+    vTextureCoord = a_coords;
+  }
+</script>
+
+<script id="background-fragment-shader" type="x-shader/x-fragment">
+  precision mediump float;
+
+  varying vec2 vTextureCoord;
+
+  uniform sampler2D uSampler;
+
+  void main(void) {
+     gl_FragColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
+ //   gl_FragColor = vec4(vTextureCoord.s, vTextureCoord.t, 1.0, 1.0);
+  }
+</script>
 </head>
 <body>
 </body>
@@ -116,6 +166,7 @@
     <div id="screen_game" style="display:none;">
       <div class="row-fluid">
         <div class="well span8">
+            <canvas id="lesson01-canvas" style="border: none;" width="1000" height="500"></canvas>
         </div>
         <div class="well span4">
           <script id="score_board_template" type="text/x-jsrender">
