--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
 
     <script type="text/javascript">
         var config = {
-            server_url: "ws://ec2:9160",
+            server_url: "ws://siema.qwpx.net:9160",
         };
     </script>
     <script type="text/javascript" src="js/webgl-utils.js"> </script>
