--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,7 @@ varying vec4 v_color;
 
 void main() {
   gl_Position = uPMatrix*vec4(a_position, 0, 1);
+  gl_PointSize = 10.0;
   v_color = a_color;
 }
 </script>
