--- a/frontend/index.html
+++ b/frontend/index.html
@@ -161,6 +161,7 @@ void main() {
         Room members:
         <ul id="screen_room_members">
         </ul>
+        Please wait till room owner starts game!
         <a class="btn" id="screen_room_btn_start">Start!</a>
     </div>
     <div id="screen_game" style="display:none;">
