--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
 
     <script type="text/javascript">
         var config = {
-            server_url: "ws://siema.qwpx.net:9160",
+            server_url: "ws://webtacka.net:9160",
         };
     </script>
     <script type="text/javascript" src="js/webgl-utils.js"> </script>
@@ -96,7 +96,7 @@ void main() {
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li class="active"><a href="#">About</a></li>
+              <li><a href="#" id="about_btn">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -189,5 +189,17 @@ void main() {
   </div>
 
 </div>
+<div class="modal hide" id="about_modal">
+    <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">×</button>
+    <h3>Webtacka version 0.1</h3>
+    </div>
+    <div class="modal-body">
+    <p>copyright (c) 2012 by Aga Szefer, Jarosław Błasiok, Adam Michalik &amp; Mateusz Kwapich</p>
+    </div>
+    <div class="modal-footer">
+    <a href="#" class="btn btn-primary" data-dismiss="modal">Close</a>
+    </div>
+    </div>
 </html>
 
