--- a/frontend/index.html
+++ b/frontend/index.html
@@ -195,7 +195,8 @@ void main() {
     <h3>Webtacka version 0.1</h3>
     </div>
     <div class="modal-body">
-    <p>copyright (c) 2012 by Aga Szefer, Jarosław Błasiok, Adam Michalik &amp; Mateusz Kwapich</p>
+    <p>copyright &copy; 2012 by Aga Szefer, Jarosław Błasiok, Adam Michalik &amp; Mateusz Kwapich</p>
+    <p>Facebook Hackathon - Facebook Summer of Hack - Seattle</p>
     </div>
     <div class="modal-footer">
     <a href="#" class="btn btn-primary" data-dismiss="modal">Close</a>
