--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,9 @@
     <script type="text/javascript" src="js/ui.js"></script>
     <script type="text/javascript" src="js/net.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript">
+      $(function(){ initGL();});
+    </script>
     <style>
     .user_color {
       width: 15px;
