--- a/frontend/index.html
+++ b/frontend/index.html
@@ -172,6 +172,7 @@ void main() {
       <div class="row-fluid">
         <div class="well span9">
             <canvas id="lesson01-canvas" style="border: none;" width="660" height="500"></canvas>
+            <div id="screen_game_end" style="disply:none; witdth: 660px; height: 550px;"><h1>Game ended!</h1></div>
         </div>
         <div class="well span3">
           <script id="score_board_template" type="text/x-jsrender">
