--- a/frontend/index.html
+++ b/frontend/index.html
@@ -182,7 +182,7 @@ void main() {
         <div class="well span3">
           <script id="score_board_template" type="text/x-jsrender">
             <li nick="{{>nick}}" color1="{{>color1}}"
-            color2="{{>color2}}" class="score_board_entry"><div class="user_color"></div> {{>nick}} {{>score}}</li>
+            color2="{{>color2}}" class="score_board_entry"><div class="user_color"></div> {{>nick}}: {{>score}}</li>
           </script>
           <ul id="screen_room_score_board">
           <ul>
