--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,6 +165,7 @@ void main() {
     </div>
 
     <div class="well" id="screen_room" style="display: none;">
+      <!--<a class="part_room_btn" >Part room</a>-->
         <h2> Welcome to room #<span id="screen_room_id"></span>.</h2>
         Room members:
         <ul id="screen_room_members">
