--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,11 +15,8 @@
 
 
 
-    <script type="text/javascript">
-        var config = {
-            server_url: "ws://webtacka.net:9160",
-        };
-    </script>
+    <script type="text/javascript" src="js/config.default.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/webgl-utils.js"> </script>
     <script type="text/javascript" src="js/glMatrix-0.9.5.min.js"> </script>
     <script type="text/javascript" src="js/engine.js"></script>
@@ -120,7 +117,6 @@ void main() {
       </script>
     </div>
 
-    <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit" id="screen_welcome">
         <h1>Webtacka</h1>
         <label for="nick">Nick:</label>
