--- a/frontend/index.html
+++ b/frontend/index.html
@@ -141,7 +141,7 @@ void main() {
         <div class="well span4">
             <h3>Room list</h3>
             Please choose a room from a list or create new.<br />
-            <input type="text" id="create_room_capacity" placeholder="capacity…" value="6" style="display:none; color:#111111">
+            <input type="text" id="create_room_capacity" placeholder="capacity…" value="6" style="color:#111111">
             <a class="btn btn-primary" id="create_room_btn">Create room</a>
          </div>
           <div class="well span8">
